// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Option parser integration empty snapshot 1`] = `
{
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 1000,
  "ignoreFiles": "",
  "options": {
    "0": false,
    "1": false,
    "2": Symbol(missing),
    "3": 1000,
    "4": "",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--entrypoint=./src/index.ts" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": ".",
  "graphMaxDepth": 1000,
  "ignoreFiles": "",
  "options": {
    "0": false,
    "1": false,
    "2": ".",
    "3": 1000,
    "4": "",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--entrypoint=\\"./src/index.ts\\"" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": """,
  "graphMaxDepth": 1000,
  "ignoreFiles": "",
  "options": {
    "0": false,
    "1": false,
    "2": """,
    "3": 1000,
    "4": "",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--graph-max-depth=900" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 900,
  "ignoreFiles": "",
  "options": {
    "0": false,
    "1": false,
    "2": Symbol(missing),
    "3": 900,
    "4": "",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--help" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 1000,
  "ignoreFiles": "",
  "options": {
    "0": true,
    "1": false,
    "2": Symbol(missing),
    "3": 1000,
    "4": "",
  },
  "printHelpAndExit": true,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--ignore-files=**/*.test.ts" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 1000,
  "ignoreFiles": "*",
  "options": {
    "0": false,
    "1": false,
    "2": Symbol(missing),
    "3": 1000,
    "4": "*",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--ignore-files=\\"**/*.test.ts\\"" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 1000,
  "ignoreFiles": """,
  "options": {
    "0": false,
    "1": false,
    "2": Symbol(missing),
    "3": 1000,
    "4": """,
  },
  "printHelpAndExit": false,
  "printVersionAndExit": false,
}
`;

exports[`Option parser integration snapshot of the "--version" option 1`] = `
OptionsClass {
  "allOptions": [
    "0",
    "1",
    "2",
    "3",
    "4",
  ],
  "entrypointLocation": Symbol(missing),
  "graphMaxDepth": 1000,
  "ignoreFiles": "",
  "options": {
    "0": false,
    "1": true,
    "2": Symbol(missing),
    "3": 1000,
    "4": "",
  },
  "printHelpAndExit": false,
  "printVersionAndExit": true,
}
`;
